<resources>
    <string name="app_name">DartTracker</string>
    <string name="action_settings">Settings</string>
    <string name="neuesSpiel_text">Neues Spiel</string>
    <string name="heading">Spielerauswahl</string>
    <string name="text_button_back">zurück</string>
    <string name="text_button_ok">OK</string>
    <string name="heading_player_text">Spieler</string>
    <string name="heading_points_text">Punkte</string>
    <string name="table_heading_choice">Auswahl</string>
    <string name="text_kriterium">Kriterium</string>
    <string name="text_wert">Wert</string>
    <string name="text_zwanzig">Trefferquote 20</string>
    <string name="text_statistic">Statistik</string>
    <string name="text_vierzig">Trefferquote 40</string>
    <string name="text_sechzig">Trefferquote 60</string>
</resources>
