<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/heading"
        android:id="@+id/textView3"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:transitionGroup="true"
        android:stretchColumns="0"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/spieler_auswahl_table" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tableRow_heading"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heading_player_text"
                android:id="@+id/user_choice_heading"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/table_heading_choice"
                android:id="@+id/table_heading_choice"
                android:textStyle="bold" />

        </TableRow>
    </TableLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_button_back"
            android:id="@+id/button"
            android:layout_gravity="left|top"
            android:layout_marginLeft="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_button_ok"
            android:id="@+id/start_button"
            android:layout_gravity="right|top"
            android:layout_marginRight="20dp" />

    </FrameLayout>
</LinearLayout>